--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stripe/stripe-js": "^7.3.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
